<resources>
    <string name="app_name">Plantes News</string>

    <string name="botton_home_item"> Acceuil</string>

    <string name="botton_collection_item"> Collection</string>



    <string name="botton_add_plant_item">Ajouter</string>



    <!-- Page d'accueil -->
    <string name="home_page_title">A découvrir</string>
    <string name="home_page_last_plant_section">Dernière plante</string>

    <!-- Plante customise -->
    <string name="item_plant_name">Nom de la plante</string>
    <string name="item_plant_description">Description de la plante</string>

    <!-- Page de collection -->
    <string name="collection_page_title">Ma collection</string>

    <!-- Page d'ajout de plante  -->
    <string name="plante_add_page_title">Ajout d\'une plante</string>
    <string name="plante_add_page_upload_button">Charger Image</string>
    <string name="plante_add_page_name_input">@string/item_plant_name</string>
    <string name="plante_add_page_desciption_input">@string/item_plant_description</string>

    <string-array name="add_plante_page_grow_spinner_input">
        <item> Croissance : Lente</item>
        <item> Croissance : Moyenne</item>
        <item> Croissance : Rapide</item>
    </string-array>


    <string-array name="add_plante_page_water_spinner_input">
        <item> Consommation : Faible</item>
        <item> Consommation : Moyenne</item>
        <item> Consommation : Elevee</item>
    </string-array>

    <string name="add_plante_page_confirm_button">Confirmer</string>

    <!-- fenetre pop up  de detail-->
    <string name="popup_plant_name">Plant Name</string>
    <string name="popup_plant_description">Description</string>
    <string name="popup_plant_description_subtitle">Petite description</string>
    <string name="popup_plant_grow_description">Description</string>
    <string name="popup_plant_grow_title">Croissance</string>
    <string name="popup_plant_water_title">Consommation d eau</string>
    <string name="popup_plant_grow_description_subtitle">Lente</string>

    <string name="popup_plant_water_description">Description</string>
    <string name="popup_plant_water_description_subtitle">Moyenne</string>

</resources>